<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AddressBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Dodaj</string>
    <string name="tv_name">Ime i prezime</string>
    <string name="tv_email">E-Mail</string>
    <string name="tv_phone">Telefon</string>
    <string name="tv_note">Bilješka</string>
    <string name="tv_facebook">Facebook profil</string>
    <string name="add_save">Spremi</string>
    <string name="add_cancel">Odustani</string>
    <string name="list_item_name_template">&lt;ime&gt;</string>
    <string name="list_item_tel_email_template">&lt;telefon&gt;, &lt;email&gt;</string>
    <string name="profile_call">Zovi</string>
    <string name="profile_view_facebook_profile">Facebook</string>
    <string name="profile_template">&lt;vrijednost&gt;</string>

</resources>
